# dmap-import

./: .env.template  .tool-versions  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/actions/asdf_tools/: action.yaml
.github/actions/deploy/: action.yaml  deploy.sh
.github/actions/python_dependencies/: action.yaml
.github/workflows/: ci.yaml  deploy_to_prod.yaml  deploy_to_staging.yaml  run-task.yaml
src/alembic/: env.py
src/alembic/versions/: 001_d630193252db_init_rds_schema.py  002_0d3bf1348c58_new_reference_org_name_columns.py  003_fb033ef6de1b_add_reference_notes_column.py  004_214f62b149e9_drop_reference_column.py  005_775b2cf7ab94_add_token_id_multi_ride_id_to_use_transaction.py  006_8638e949eea1_alter_customer_postal_code_to_varchar.py  007_96837b10c106_reset_qlik_null_key_tables.py  008_2d6f7140c642_wc_700_comp_a_b.py  009_f2c5a52c7149_fix_wc700_comp_a.py  010_ab250e2a0b0d_wc700_comp_d.py  011_bf94c2890bc9_pk_id_to_bigint.py  012_be5284c3563e.py  013_1dc0843c9d69.py  014_140dde7b15a9_match_api_schema_types.py  015_4b8117e23c8e_wa160_view.py  016_6ce4db2752fb_wc231_compC.py  017_b6ecb4180ef0_add_wc320_late_tap_adjustment.py  018_76a64efdbdd9_alter_fare_prod_id_varchar.py  019_92ab6c167c5b_feat_add_validator_interface_to_use_.py  020_aa29a832d93f_add_citation_dataset.py  021_07db86066661_amending_wa160.py  022_12c471022b21_adding_a_new_column.py  023_7ac3ef57d137_adding_ad_hoc_journal_entries_view.py  024_328f5dd53ae9_adding_wc231_view.py  025_0fd250676519_deleting_wc321.py  025_6dd04664d36e_renaming_wc321_clearing_house.py  026_042e1cdb9668_adding_table_indexes_to_fix_performance_.py  027_714142718ec1_updates_to_wc231_and_wa160.py  027_f3a1c9d85b72_updating_wc231_view.py  028_8b430ccf2ddb_adding_comp_a_and_b_report_views.py  029_75d886efb9ac_adding_a_new_column.py  030_960c57e8e70b_adding_wo110_and_wo150_views.py  031_f5ded62bd362_adding_views_042826.py  032_36f89551fe75_adding_farerev_recovery_txn_views.py  033_91200623e443_adding_more_wc232_views.py  034_873bd2afd66f_adding_wo118_and_new_columns_to_wa160.py  035_1018cd5a6a5e_fixing_wa160.py  035_1a962fdb6931_resetting_table_edw_payment_summary.py  036_b03c46340951_rebuild_all_views_with_new_numeric_type_.py  037_ff97f2739274_regenerate_edw_frm_crdb_recon_sysconf_.py
src/cubic_loader/: __init__.py  pipeline.py
src/cubic_loader/dmap/: __init__.py  api_copy_job.py  api_job_list.py  dmap_api.py
src/cubic_loader/qlik/: __init__.py  ods_qlik.py  ods_tables.py  rds_utils.py  utils.py
src/cubic_loader/utils/: __init__.py  aws.py  logger.py  postgres.py  remote_locations.py  runtime.py
src/dmap_import/: __init__.py  api_copy_job.py  api_job_list.py  pipeline.py  util_api.py  util_aws.py  util_rds.py
src/dmap_import/schemas/: __init__.py  agg_daily_fareprod.py  (+13 more)
tests/: test_dmap.py
(+19 files in other folders)
