[tool.poetry]
name = "cubic_loader"
version = "0.1.0"
description = "MBTA Application for Archiving Cubic Data in Postgres"
authors = [
    "MBTA TID <developer@mbta.com>"
]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["mypy"], version = "^2.0.23"}
alembic = "^1.12.1"
boto3 = "^1.35.5"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
polars = "^1.5.0"
psutil = "^6.0.0"

[tool.poetry.scripts]
start = 'cubic_loader.pipeline:main'

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
pylint = "^3.2.6"
pytest = "^8.3.2"
ipykernel = "^6.29.5"
types-requests = "^2.32.0.20240712"
types-python-dateutil = "^2.9.0.20240821"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
pretty = true
python_version = 3.12
warn_unreachable = true
warn_unused_ignores = true

[tool.pylint]
disable = [
  # disable doc string requirements
  "missing-module-docstring",
  # allow catching a generic exception
  "broad-except",
  # we're logging everything so its "ok"
  "lost-exception",
  # caught by black
  "line-too-long",
]
good-names = ["e", "i", "s"]
max-line-length = 120
min-similarity-lines = 10
# ignore the alembic directory.
ignore-paths = ["^src/alembic/.*$"]
